RT-17760: Update EPIC Research (+tweak wtcs about)

--- a/content/education/EPIC/WeTeach_CS/about.html
+++ b/content/education/EPIC/WeTeach_CS/about.html
@@ -155,7 +155,7 @@
 	<h4>
 		What WeTeach_CS Provides</h4>
 	<figure>
-		<img class="img-responsive" src="/documents/1084364/1750990/weteach-about-bubble_diagram.jpg" title="A bubble diagram about what WeTeach_CS provides (see caption for details)" /> <figcaption class="sr-only">
+		<img class="img-responsive" src="/documents/1084364/1750990/weteach-about-bubble_diagram.jpg" title="A bubble diagram about what WeTeach_CS provides (caption, for screen readers, describes content)" /> <figcaption class="sr-only">
 		<p>
 			WeTeach_CS, a University of Texas entity, provides the following:</p>
 		<ul>
