--- a/content/education/EPIC/research.html
+++ b/content/education/EPIC/research.html
@@ -1,3 +1,9 @@
+<style id="style--abbr-title" type="text/css">
+/* TODO: Add this to global CSS */
+/* FAQ: The global CSS styles this with a border bottom,
+        but neglects to remove browsers' dotted underline style
+        (has style: Firefox, Chrome…; no style: Safari…) */
+        abbr[title] { text-decoration: none; }</style>
 <style id="style--weteachcs-content" type="text/css">
 	/* TODO: Use this scope instead of `style` tags */
 	/* WARN: Duplicated in:
@@ -177,7 +183,7 @@
 	<p>
 		Project ROCS aims to produce a framework for collecting and reporting outcome measures that accurately portray the nature and extent of access to and participation in K-12 computer science education, especially for students in rural communities. This research project is funded by Google.</p>
 	<p>
-		The CAPE Framework was developed as a result of Project ROCS. The purpose of this framework is to help education leaders, policy makers, and researchers assess equity in CS education at multiple levels of the educational system. The framework addresses four key components of CS education: Capacity for, Access to, Participation in, and Experience of CS education (CAPE).</p>
+		The <dfn id="def-cape">CAPE</dfn> Framework was developed as a result of Project ROCS. The purpose of this framework is to help education leaders, policy makers, and researchers assess equity in CS education at multiple levels of the educational system. The framework addresses four key components of CS education: Capacity for, Access to, Participation in, and Experience of CS education (CAPE).</p>
 	<p>
 		Fletcher, C.L. and Warner, J. R., (2019). Summary of the <a href="https://utexas.box.com/s/t0d8mugfd8qvaxwk0uoeaqlxf65bdlrb" title="CAPE Framework Summary Publication">CAPE Framework</a> for Assessing Equity in Computer Science Education. <em>Retrieved from <a href="https://www.tacc.utexas.edu/epic/research">https://www.tacc.utexas.edu/epic/research</a>.</em></p>
 	<h5>Team</h5>
@@ -191,6 +197,55 @@
 		<li>
 			Ryan Torbey, GRA</li>
 	</ul>
+	<h5>
+		<abbr title="Capacity, Access, Participation, Experience">CAPE</abbr> Framework</h5>
+	<figure>
+		<img class="img-responsive" src="/documents/1084364/1761473/epic-cape.png" title="A pyramid diagram about what EPIC provides through Project ROCS (Rural Opportunities in Computer Science) (caption, for screen readers, describes content)" /> <figcaption class="sr-only">
+		<p>
+			Examples of equity to assess:</p>
+		<dl>
+			<dt>
+				<em>Experience of</em> <abbr title="Computer Science">CS</abbr> Education</dt>
+			<dd>
+				<strong>Student outcomes</strong>
+				<ul>
+					<li>
+						How does the quality of instruction differ across subgroups of students?</li>
+					<li>
+						How does this affect learning?</li>
+				</ul>
+			</dd>
+			<dt>
+				<em>Participation in</em> <abbr title="Computer Science">CS</abbr> Education</dt>
+			<dd>
+				<strong>Student enrollment</strong>
+				<ul>
+					<li>
+						Which subgroups are underrepresented in CS courses?</li>
+					<li>
+						To what extent?</li>
+				</ul>
+			</dd>
+			<dt>
+				<em>Access to</em> <abbr title="Computer Science">CS</abbr> Education</dt>
+			<dd>
+				<strong>Course offerings</strong>
+				<ul>
+					<li>
+						Are CS courses offered in low-income schools at similar rates to other schools?</li>
+				</ul>
+			</dd>
+			<dt>
+				<em>Capactiy for</em> <abbr title="Computer Science">CS</abbr> Education</dt>
+			<dd>
+				<strong>Teachers, funding, policies</strong>
+				<ul>
+					<li>
+						Do districts in all areas have the resources to train and certify teachers?</li>
+				</ul>
+			</dd>
+		</dl>
+		</figcaption></figure>
 	<hr />
 	<h3>
 		Resources</h3>
