--- a/content/about/jobs.html
+++ b/content/about/jobs.html
@@ -45,52 +45,21 @@
 		</div>
 	</div>
 
-
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
-				<a aria-controls="cybersecurity-education-specialist" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#cybersecurity-education-specialist" role="button">Cybersecurity Education Specialist</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="cybersecurity-education-specialist" role="tabpanel">
-			<div class="panel-body">
-				<p>Develop curriculum resources and deliver professional development for middle and high school cybersecurity teachers.</p>
-
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Cybersecurity-Education-Specialist_R_00008966" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-			</div>
-		</div>
-	</div>
-
-
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
-				<a aria-controls="tacc-help-desk-specialist" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#tacc-help-desk-specialist" role="button">TACC Help Desk Specialist</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="tacc-help-desk-specialist" role="tabpanel">
-			<div class="panel-body">
-				<p>The Help Desk Specialist position in the Technology Infrastructure group the Texas Advanced Computing Center (TACC) will provide advanced user support and technical expertise to the academic research community.  This position specifically provides third shift coverage for support of users and hardware resources.</p>
-
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/TACC-Help-Desk-Specialist_R_00009066" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-			</div>
-		</div>
-	</div>
-
-
 	<!-- TEMPLATE: Job Listing --><!-- FAQ: Be sure to update and test the collapsible section UX --><!-- NOTE: The `id="data"` is repeated... bad. What relies on that ID? --><!-- RFE: Consider using <template> tag --><!--
-	<div class="panel-heading" id="data" role="tab">
-		<h4 class="panel-title">
-			<a aria-controls="__JOB_TITLE_LOWERCASE_ID__" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#__JOB_TITLE_LOWERCASE_ID__" role="button">__JOB_TITLE__</a></h4>
-	</div>
-	<div aria-labelledby="data" class="panel-collapse collapse" id="__JOB_TITLE_LOWERCASE_ID__" role="tabpanel">
-		<div class="panel-body">
-			<p>__DESCRIPTION__</p>
-			<p>
-				<strong><a href="__REPLACE_URL__https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/…__REPLACE_URL__" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="__JOB_TITLE_LOWERCASE_ID__" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#__JOB_TITLE_LOWERCASE_ID__" role="button">__JOB_TITLE__</a></h4>
 		</div>
-	</div>
-	--></div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="__JOB_TITLE_LOWERCASE_ID__" role="tabpanel">
+			<div class="panel-body">
+				<p>__DESCRIPTION__</p>
+				<p>
+					<strong><a href="__REPLACE_URL__https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/…__REPLACE_URL__" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>-->
+</div>
 <!-- FAQ: Internship listing currently hidden --><!--
 <h4 style="margin-top:30px;">
 	Internships</h4>
