RT-17689: "Nicola (Nikki)" to "Nikki"

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -645,7 +645,7 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/nicola-hendricks">Hendricks, Nicola (Nikki)</a></td>
+				<a href="/web/website/about/directory/nikki-hendricks">Hendricks, Nikki</a></td>
 			<td>
 				<a href="mailto:nhendricks@tacc.utexas.edu">nhendricks@tacc.utexas.edu</a></td>
 			<td>
