Quick: Remove old event

--- a/content/home--training-and-events.html
+++ b/content/home--training-and-events.html
@@ -3,24 +3,13 @@
 <br />
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://www.tacc.utexas.edu/education/institutes/ace" style="margin-bottom:10px;" /><img class="img-responsive" src="/documents/1084364/1825988/advanced-coputing-essentials.jpg" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="https://www.tacc.utexas.edu/education/institutes/ace" target="_blank">
-				<strong>Advanced Computing Essentials</strong></a><br />
-				Interactive Webcast<br />
-				June 9—11</p>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-3">
 		<a href="https://www.tacc.utexas.edu/education/institutes/applied-parallel-programming" style="margin-bottom:10px;" /><img class="img-responsive" src="/documents/1084364/1825988/applied-parallel-programming.jpg" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
 			<a href="https://www.tacc.utexas.edu/education/institutes/applied-parallel-programming" target="_blank">
 				<strong>Computational Research Techniques:</strong><br />
 				Applied Parallel Programming</a><br />
-				July 7—10</p>
+				July 2, 9, 16, 23</p>
 	</div>
 </div>
 <div class="row">
@@ -31,7 +20,7 @@
 			<a href="https://www.tacc.utexas.edu/education/institutes/scientific-visualization" target="_blank">
 				<strong>Computational Research Techniques:</strong><br />
 				Scientific Visualization</a><br />
-				July 7—10</p>
+				June 30 &amp; July 7, 14, 21</p>
 	</div>
 </div>
 <!--<div class="row">
