Quick: Update based on latest content

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -249,7 +249,7 @@
 			<td>
 				<a href="mcawood@tacc.utexas.edu">mcawood@tacc.utexas.edu</a></td>
 			<td>
-				Future Technologies</td>
+				HPC Performance and Architectures</td>
 		</tr>
 		<tr>
 			<td>
