RT-17924: Update A. Barnes' title

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -89,7 +89,7 @@
 			<td>
 				<a href="mailto:abarnes@tacc.utexas.edu">abarnes@tacc.utexas.edu</a></td>
 			<td>
-				Cloud &amp; Interactive Computing (CIC)</td>
+				Networking, Security &amp; Operations</td>
 		</tr>
 		<tr>
 			<td>
