RT-17916: Add & Re-Order

--- a/content/home--training-and-events.html
+++ b/content/home--training-and-events.html
@@ -3,6 +3,28 @@
 <br />
 <div class="row">
 	<div class="col-xs-3">
+		<a href="https://www.tacc.utexas.edu/education/institutes/scientific-visualization" style="margin-bottom:10px;" /><img class="img-responsive" src="/documents/1084364/1825988/scientific+vizualization.jpg" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://www.tacc.utexas.edu/education/institutes/scientific-visualization" target="_blank">
+				<strong>Computational Research Techniques:</strong><br />
+				Scientific Visualization</a><br />
+				June 30 &amp; July 7, 14, 21</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://www.tacc.utexas.edu/education/institutes/reproducible-science" style="margin-bottom:10px;" /><img class="img-responsive" src="/documents/1084364/1825988/reproducible-science.jpg" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://www.tacc.utexas.edu/education/institutes/reproducible-science" target="_blank">
+				<strong>Computational Research Techniques:</strong><br />
+				Reproducible Science</a><br />
+				July 1, 8, 15, 22</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
 		<a href="https://www.tacc.utexas.edu/education/institutes/applied-parallel-programming" style="margin-bottom:10px;" /><img class="img-responsive" src="/documents/1084364/1825988/applied-parallel-programming.jpg" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
@@ -14,13 +36,13 @@
 </div>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://www.tacc.utexas.edu/education/institutes/scientific-visualization" style="margin-bottom:10px;" /><img class="img-responsive" src="/documents/1084364/1825988/scientific+vizualization.jpg" style="margin-bottom:10px;" /></a></div>
+		<a href="https://www.tacc.utexas.edu/education/institutes/machine-learning" style="margin-bottom:10px;" /><img class="img-responsive" src="/documents/1084364/1825988/machine-learning-with-intel.jpg" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://www.tacc.utexas.edu/education/institutes/scientific-visualization" target="_blank">
-				<strong>Computational Research Techniques:</strong><br />
-				Scientific Visualization</a><br />
-				June 30 &amp; July 7, 14, 21</p>
+			<a href="https://www.tacc.utexas.edu/education/institutes/machine-learning" target="_blank">
+				<strong>Machine Learning</strong><br />
+				(in cooperation w/ Intel)</a><br />
+				August 10–14</p>
 	</div>
 </div>
 <!--<div class="row">
