RT-17847: New Staff Kirby Rankin

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -1061,6 +1061,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/kirby-rankin">Rankin, Kirby</a></td>
+			<td>
+				<a href="mailto:krankin@tacc.utexas.edu">krankin@tacc.utexas.edu</a></td>
+			<td>
+				Expanding Pathways in Computing (EPIC)</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/alex-rocha">Rocha, Alex</a></td>
 			<td>
 				<a href="mailto:rochaa@tacc.utexas.edu">rochaa@tacc.utexas.edu</a></td>
