RT-18077: Add a tutorial

--- a/content/taccster--body.html
+++ b/content/taccster--body.html
@@ -428,6 +428,9 @@
                     Tutorials<a name="tutorials">&nbsp;</a></p>
                 <hr class="no-top" />
                 <p>
+                    <b>MATLAB Parallel Computing Toolbox</b><br />
+                    MATLAB Parallel Computing Toolbox lets you solve computationally and data-intensive problems using multicore processors, GPUs, and computer clusters. This tutorial will demonstrate MATLAB functions and features that help you take advantage of parallel computing resources without requiring any extra coding.</p>
+                <p>
                     <b>OpenMP / MPI</b><br />
                     The most common methods on parallelizing your serial code for an HPC environment include the use of OpenMP and MPI. OpenMP allows for concurrent processing across cores on a single node where MPI provides the ability to run concurrently across multiple nodes in a cluster.</p>
                 <p>
