RT-18050: Disabled button on education/tours

--- a/content/education/tours--body.html
+++ b/content/education/tours--body.html
@@ -1,6 +1,6 @@
 <!--<p style="color:#F00; font-weight:bold; margin-top:25px;">Due to a full Summer 2019 K-12 program schedule, we cannot accommodate K-12 groups during this period. Tour requests for the Visualization Laboratory and Machine Room will resume on August 19, 2019. Thank you for your patience.</p>-->
 <p style="margin:25px 0px;">
-	<a class="btn btn-warning btn-lg btn-block" href="/web/website/education/tours/schedule">Schedule a tour today!</a></p>
+	<button disabled class="btn btn-warning btn-lg btn-block" href="/web/website/education/tours/schedule">Schedule a tour today!</button></p>
 <h5 style="margin-bottom:0px;">
 	AVAILABLE TOUR TIMES</h5>
 <p style="margin-top:5px;">
