--- a/content/about/jobs.html
+++ b/content/about/jobs.html
@@ -45,6 +45,22 @@
 		</div>
 	</div>
 
+
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="storage-administrator" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#storage-administrator" role="button">Storage Administrator</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="storage-administrator" role="tabpanel">
+			<div class="panel-body">
+				<p>Support production storage systems in TACC's Advanced Computing Systems group in addition to administering parallel file systems and demonstrated skills in systematic Linux troubleshooting.</p>
+
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Storage-Administrator_R_00009605" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+
 	<!-- TEMPLATE: Job Listing --><!-- FAQ: Be sure to update and test the collapsible section UX --><!-- NOTE: The `id="data"` is repeated... bad. What relies on that ID? --><!-- RFE: Consider using <template> tag --><!--
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
