RT-17967: Add staff Alex Ferrier

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -405,6 +405,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/alex-ferrier">Ferrier, Alex</a></td>
+			<td>
+				<a href="mailto:aferrier@tacc.utexas.edu">aferrier@tacc.utexas.edu</a></td>
+			<td>
+				Networking, Security, Operations</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/alexander-fields">Fields, Alexander</a></td>
 			<td>
 				<a href="mailto:afields@tacc.utexas.edu">afields@tacc.utexas.edu</a></td>
