RT-18249: Change condition on epic cert and cip

--- a/content/education/EPIC/WeTeach_CS/certification.html
+++ b/content/education/EPIC/WeTeach_CS/certification.html
@@ -249,7 +249,7 @@
 			<li>
 				You are pursuing a TEA certification in Computer Science 8-12. You do not currently hold a certification in Computer Science or Computer Information Systems.</li>
 			<li>
-				You are currently certified to teach in Texas OR enrolled in a <a href="https://tea.texas.gov/Texas_Educators/Preparation_and_Continuing_Education/Educator_Preparation_Home/" target="_blank">TEA approved teacher certification program</a> in Texas.</li>
+				You are currently certified to teach in Texas and the teacher of record in a public or charter school classroom OR enrolled in a <a href="https://tea.texas.gov/Texas_Educators/Preparation_and_Continuing_Education/Educator_Preparation_Home/" target="_blank">TEA approved teacher certification program</a> in Texas.</li>
 			<li>
 				View the <a href="/web/website/epic/weteachcs/certification/cip-checklist">CIP Checklist</a> for complete requirements and application information.</li>
 		</ul>
