--- a/content/education/EPIC/WeTeach_CS/certification/cip-checklist.html
+++ b/content/education/EPIC/WeTeach_CS/certification/cip-checklist.html
@@ -68,7 +68,7 @@
 			<li>
 				Not already be certified in Computer Science or Computer Information Systems (any level).</li>
 			<li>
-				Be currently certified to teach in Texas or enrolled in an approved teacher certification program for Texas.</li>
+				Be currently certified to teach in Texas and the teacher of record in a public or charter school classroom or enrolled in an approved teacher certification program for Texas.</li>
 		</ul>
 		<h4>
 			STEP 2: Decide on When to Take the Test</h4>
