RT-17739: Updated thumbnail

--- a/content/education/EPIC/WeTeach_CS/cs-regional-data--2018-2019.html
+++ b/content/education/EPIC/WeTeach_CS/cs-regional-data--2018-2019.html
@@ -12,7 +12,7 @@
 </div>
 <div class="row">
 	<div class="col-sm-4">
-		<img class="img-responsive" src="/documents/1084364/1750990/data-pdf-thumbnail.png/" /></div>
+		<img class="img-responsive" src="/documents/1084364/1898187/cs-regional-data-pdf-thumb--2018-2019.jpg" /></div>
 	<div class="col-sm-4">
 		<ul>
 			<li>
