RT-18305: Update events form CMS and ticket

--- a/content/home--training-and-events.html
+++ b/content/home--training-and-events.html
@@ -1,85 +1,20 @@
 <h2 id="training-events">
 	Training &amp; Events</h2>
-<br />
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://www.tacc.utexas.edu/education/institutes/scientific-visualization" style="margin-bottom:10px;" /><img class="img-responsive" src="/documents/1084364/1825988/scientific+vizualization.jpg" style="margin-bottom:10px;" /></a></div>
+		<a href="/web/website/taccster" style="margin-bottom:10px;"><img class="img-responsive" src="/documents/1084364/1825988/homepageNews-taccster.jpg/" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://www.tacc.utexas.edu/education/institutes/scientific-visualization" target="_blank">
-				<strong>Computational Research Techniques:</strong><br />
-				Scientific Visualization</a><br />
-				June 30 &amp; July 7, 14, 21</p>
+			<a href="/web/website/taccster"> <strong>TACCSTER 2020: TACC Symposium for Texas Researchers</strong></a><br />
+			September 17, 2020 – September 18, 2020</p>
 	</div>
 </div>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://www.tacc.utexas.edu/education/institutes/reproducible-science" style="margin-bottom:10px;" /><img class="img-responsive" src="/documents/1084364/1825988/reproducible-science.jpg" style="margin-bottom:10px;" /></a></div>
+		<a href="https://frontera-portal.tacc.utexas.edu/allocations/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/-allocations.jpg/" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://www.tacc.utexas.edu/education/institutes/reproducible-science" target="_blank">
-				<strong>Computational Research Techniques:</strong><br />
-				Reproducible Science</a><br />
-				July 1, 8, 15, 22</p>
+			<a href="https://frontera-portal.tacc.utexas.edu/allocations/" target="_blank"> <strong>Leadership Resource Allocation (LRAC) Annual Allocation Submission</strong></a><br />
+			December 14, 2020 – January 15, 2021</p>
 	</div>
 </div>
-<div class="row">
-	<div class="col-xs-3">
-		<a href="https://www.tacc.utexas.edu/education/institutes/applied-parallel-programming" style="margin-bottom:10px;" /><img class="img-responsive" src="/documents/1084364/1825988/applied-parallel-programming.jpg" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="https://www.tacc.utexas.edu/education/institutes/applied-parallel-programming" target="_blank">
-				<strong>Computational Research Techniques:</strong><br />
-				Applied Parallel Programming</a><br />
-				July 2, 9, 16, 23</p>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-3">
-		<a href="https://www.tacc.utexas.edu/education/institutes/machine-learning" style="margin-bottom:10px;" /><img class="img-responsive" src="/documents/1084364/1825988/machine-learning-with-intel.jpg" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="https://www.tacc.utexas.edu/education/institutes/machine-learning" target="_blank">
-				<strong>Machine Learning</strong><br />
-				(in cooperation w/ Intel)</a><br />
-				August 10–14</p>
-	</div>
-</div>
-<!--<div class="row">
-	<div class="col-xs-3">
-		<a href="/web/website/taccster"><img class="img-responsive" src="/documents/1084364/1607128/TIS-cloud.jpg/" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="/web/website/taccster">SEPT 20-21<br />
-			TACCSTER Symposium</a></p>
-	</div>
-</div>--><!--<div class="row">
-	<div class="col-xs-3">
-		<a href="https://datascience.chaminade.edu/curriculum/summer-immersion-experience/" target="_blank"><img alt="Chaminade University Summer Immersion Experience" class="img-responsive" src="/documents/1084364/1694621/chaminade.jpg/" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="https://datascience.chaminade.edu/curriculum/summer-immersion-experience/" target="_blank">Chaminade University Summer Immersion Experience</a><br />
-			May 20 - June 14<br />
-			Honolulu, Hawaii</p>
-	</div>
-</div>--><!--<div class="row">
-	<div class="col-xs-3">
-		<a href="http://rice2019oghpc.rice.edu/" target="_blank"><img alt="Rice HPC Oil &amp; Gas Conference" class="img-responsive" src="/documents/1084364/1694621/oil-and-gas.jpg/" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="http://rice2019oghpc.rice.edu/" target="_blank">Rice HPC Oil &amp; Gas Conference</a><br />
-			March 4<br />
-			Houston, TX</p>
-	</div>
-</div>--><!-- !!!: Course Expired — added too late, by Wesley B, on 2020-03-10 --><!--
-<div class="row">
-	<div class="col-xs-3">
-		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=84" target="_blank"><img alt="Workshop on Artificial Intelligence in Natural Hazards Engineering" class="img-responsive" src="/documents/1084364/1694621/tacc-learning-portal.jpg" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=84" target="_blank">Containers@TACC</a><br />
-			March 6, 2020<br />
-			In-Person and Webcast</p>
-	</div>
-</div>
--->
