RT-18314: Update VisLab Tours Page

--- a/content/education/tours--alert.html
+++ b/content/education/tours--alert.html
@@ -4,10 +4,6 @@
     }</style>
     <div class="portlet-msg-info">
         <p>
-            In accordance with COVID-19 recommendations from public health officials and UT Austin, TACC has suspended all Machine Room and Visualization Lab tours until further notice.</p>
-        <p>
-            We appreciate your understanding. We look forward to reaching out to reschedule TACC tour experiences when in-person campus visits resume.</p>
-        <p>
-            If you have any questions please feel free to contact us at 512-475-9411 or <a href="mailto:outreach@austin.utexas.edu">outreach@austin.utexas.edu</a>.</p>
+            Due to safety concerns resulting from COVID-19, TACC has suspended all Machine Room and Visualization Lab tours through the end of the year. Please return for updates in 2021. If you have any questions please feel free to contact us at <a href="tel:512-475-9411">512-475-9411</a> or <a href="mailto:outreach@austin.utexas.edu">outreach@austin.utexas.edu</a>.</p>
     </div>
     
