--- a/content/education/tours--body.html
+++ b/content/education/tours--body.html
@@ -1,14 +1,13 @@
-<!--<p style="color:#F00; font-weight:bold; margin-top:25px;">Due to a full Summer 2019 K-12 program schedule, we cannot accommodate K-12 groups during this period. Tour requests for the Visualization Laboratory and Machine Room will resume on August 19, 2019. Thank you for your patience.</p>-->
-<p style="margin:25px 0px;">
+<!-- FAQ: RT-18314: Hidden during COVID pandemic. -->
+<!--<p style="margin:25px 0px;">
 	<button class="btn btn-warning btn-lg btn-block" disabled="disabled" href="/web/website/education/tours/schedule">Schedule a tour today!</button></p>
 <h5 style="margin-bottom:0px;">
 	AVAILABLE TOUR TIMES</h5>
 <p style="margin-top:5px;">
 	<b>Visualization Laboratory (Main Campus): Mondays &amp; Fridays, 10am - 3pm<br />
 	Machine Room (J.J. Pickle Research Campus): Monday - Friday, 10am - 3pm</b></p>
-<!--<p>
-	<i>Due to safety considerations during Frontera construction, tour groups will not be entering the TACC machine room. The tour is still available, with viewing and discussion in front of the floor-to-ceiling windows.</i></p>-->
-<hr />
+<hr />-->
+<h5>Tour Details</h5>
 <ul type="disc">
 	<li>
 		<span class="bold">K-12 students, teachers, and community</span> - educational tours provide an overview of TACC services and resources, exposure to career opportunities in STEM fields with an emphasis in advanced computing, and an interactive learning experience.</li>
