--- a/content/education/tours--side.html
+++ b/content/education/tours--side.html
@@ -1,5 +1,5 @@
 <h5>
-	Types of Tours:</h5>
+	Types of Tours</h5>
 <p>
 	<strong>TACC Data Center</strong><br />
 	The J.J. Pickle Research Campus houses TACC's largest supercomputing systems, including <a href="/stampede" target="_blank">Stampede</a>, as well as some of the fastest, most efficient, and sought-after high performance computing and data storage systems in the world!</p>
