RT-18314: Noop: Save CMS reformat

--- a/content/education/tours--body.html
+++ b/content/education/tours--body.html
@@ -1,5 +1,4 @@
-<!-- FAQ: RT-18314: Hidden during COVID pandemic. -->
-<!--<p style="margin:25px 0px;">
+<!-- FAQ: RT-18314: Hidden during COVID pandemic. --><!--<p style="margin:25px 0px;">
 	<button class="btn btn-warning btn-lg btn-block" disabled="disabled" href="/web/website/education/tours/schedule">Schedule a tour today!</button></p>
 <h5 style="margin-bottom:0px;">
 	AVAILABLE TOUR TIMES</h5>
@@ -7,7 +6,8 @@
 	<b>Visualization Laboratory (Main Campus): Mondays &amp; Fridays, 10am - 3pm<br />
 	Machine Room (J.J. Pickle Research Campus): Monday - Friday, 10am - 3pm</b></p>
 <hr />-->
-<h5>Tour Details</h5>
+<h5>
+	Tour Details</h5>
 <ul type="disc">
 	<li>
 		<span class="bold">K-12 students, teachers, and community</span> - educational tours provide an overview of TACC services and resources, exposure to career opportunities in STEM fields with an emphasis in advanced computing, and an interactive learning experience.</li>
