RT-18314: Final tweaks to resolve ticket.

--- a/content/education/tours--body.html
+++ b/content/education/tours--body.html
@@ -15,8 +15,8 @@
 		<span class="bold">Undergraduate and graduate students</span>- learn about TACC visualization services, training, and research opportunities.</li>
 	<li>
 		<span class="bold">Industry partners</span> - VIP tours are available for TACC users or prospective affiliates.</li>
-	<li>
-		<span class="bold">Walk-ins</span> - the <a href="/web/website/vislab">TACC Visualization Laboratory (Vislab)</a> welcomes small groups (1-5 people), Monday-Friday from 10am-3pm. A proctor or staff member will provide a 10-minute overview. Please note: If the laboratory is in use during time of your visit, you may be asked to schedule a tour or return at a later time.</li>
+	<!-- FAQ: RT-18314: Hidden during COVID pandemic. --><!--<li>
+		<span class="bold">Walk-ins</span> - the <a href="/web/website/vislab">TACC Visualization Laboratory (Vislab)</a> welcomes small groups (1-5 people), Monday-Friday from 10am-3pm. A proctor or staff member will provide a 10-minute overview. Please note: If the laboratory is in use during time of your visit, you may be asked to schedule a tour or return at a later time.</li>-->
 </ul>
 <p>
 	Depending on the size of your group, the facilities you wish to tour, and the type of presentation you wish to see, tours can be arranged to suit your group's needs. We can comfortably accommodate groups of 25 or less. Larger groups require additional preparation and planning. Please schedule your tour at least two weeks in advance. Duration of tour: 45-60 minutes.</p>
