Quick: Home Banner Update: 2020-09-09

--- a/content/home--banner.html
+++ b/content/home--banner.html
@@ -1,22 +1,22 @@
 <div class="row">
 	<!-- opening Overall Banner Row -->
 	<div class="col-sm-6 col-xs-12">
-		<!-- opening first 2x2 --><a href="/web/website/-/sugar-coating-locks-and-loads-coronavirus-for-infection"> <img alt="SUGAR COATING LOCKS AND LOADS CORONAVIRUS FOR INFECTION" class="img-responsive" src="/documents/1084364/1821378/2x2-SugarCoating.jpg/" width="100%" /> </a></div>
+		<!-- opening first 2x2 --><a href="/web/website/-/re-engineering-antibodies-to-find-relief-for-covid-19"> <img alt="RE-ENGINEERING ANTIBODIES TO FIND RELIEF FOR COVID-19" class="img-responsive" src="/documents/1084364/1821378/2x2-CovidAntibodies.jpg/" width="100%" /> </a></div>
 	<!-- closing first 2x2 -->
 	<div class="col-sm-6 col-xs-12">
 		<!-- opening second 2x2: 2x1 and 2-1x1 rows -->
 		<div class="row">
 			<!-- opening 2x2 row -->
 			<div class="col-xs-12">
-				<a href="/web/website/-/designing-anew-radical-covid-19-drug-development-approach-shows-promise"> <img alt="DESIGNING ANEW: RADICAL COVID-19 DRUG DEVELOPMENT APPROACH SHOWS PROMISE" class="img-responsive" src="/documents/1084364/1821378/2x1-Anew.jpg/" width="100%" /> </a></div>
+				<a href="/web/website/-/international-project-to-delve-into-the-mysteries-of-brain-connections"> <img alt="INTERNATIONAL PROJECT TO DELVE INTO THE MYSTERIES OF BRAIN CONNECTIONS" class="img-responsive" src="/documents/1084364/1821378/2x1-Brain.jpg/" width="100%" /> </a></div>
 		</div>
 		<!--closing 2-1x1 row -->
 		<div class="row">
 			<!-- opening 2x2 row -->
 			<div class="col-xs-6">
-				<a href="/web/website/-/new-collection-of-stars-not-born-in-our-galaxy-discovered-in-milky-way"> <img alt="NEW COLLECTION OF STARS, NOT BORN IN OUR GALAXY, DISCOVERED IN MILKY WAY" class="img-responsive" src="/documents/1084364/1821378/1x1-Alien-Stars.jpg/" width="100%" /> </a></div>
+				<a href="/web/website/-/deep-learning-will-help-future-mars-rovers-go-farther-faster-and-do-more-science"> <img alt="DEEP LEARNING WILL HELP FUTURE MARS ROVERS GO FARTHER FASTER AND DO MORE SCIENCE" class="img-responsive" src="/documents/1084364/1821378/1x1-MarsRovers.jpg/" width="100%" /> </a></div>
 			<div class="col-xs-6">
-				<a href="/web/website/-/corona-s-ladder"> <img alt="CORONA'S LADDER" class="img-responsive" src="/documents/1084364/1821378/1x1-Coronasladder.jpg/" width="100%" /> </a></div>
+				<a href="/web/website/-/supercomputers-create-world-s-most-detailed-simulations-of-tornadoes"> <img alt="SUPERCOMPUTERS CREATE WORLD'S MOST DETAILED SIMULATIONS OF TORNADOES" class="img-responsive" src="/documents/1084364/1821378/1x1-Tornados.jpg/" width="100%" /> </a></div>
 		</div>
 		<!-- closing 2x2 row --></div>
 	<!-- closing second 2x2 --></div>
