Quick: Featured News Update: 2020-09-09

--- a/content/home--featured-news.html
+++ b/content/home--featured-news.html
@@ -4,18 +4,26 @@
 	Featured News</h3>
 <div class="row">
 	<div class="col-md-6">
-		<img alt="COVID-19 UPDATES FROM TACC" class="img-responsive" src="/documents/1084364/1809667/home-covid-page.jpg/" style="margin:0px 0px 15px 0px;" /></div>
+		<img alt="SUPERCOMPUTING PROVIDES NEW INSIGHTS INTO HEART VALVE BEHAVIOR - LATEST NEWS - TEXAS ADVANCED COMPUTING CENTER" class="img-responsive" src="/documents/1084364/1809667/home-heart-valve.png/" style="margin:0px 0px 15px 0px;" /></div>
 	<div class="col-md-6">
-		<h5 style="margin:0px 0px 25px 0px;" text-transform:="">
-			<a href="/web/website/covid-19">COVID-19 UPDATES FROM TACC</a></h5>
+		<h5 style="margin:0px 0px 25px 0px;">
+			<a href="/web/website/-/supercomputing-provides-new-insights-into-heart-valve-behavior">SUPERCOMPUTING PROVIDES NEW INSIGHTS INTO HEART VALVE BEHAVIOR</a></h5>
 	</div>
 </div>
 <div class="row">
 	<div class="col-md-6">
-		<img alt="MEET THE FRONTERA COMPUTATIONAL SCIENCE FELLOWS FOR 2020-2021" class="img-responsive" src="/documents/1084364/1809667/home-fellowship.jpg/" style="margin:0px 0px 15px 0px;" /></div>
+		<img alt="CHAMELEON TESTBED LAUNCHES THIRD PHASE WITH FOCUS ON IOT, REPRODUCIBILITY - LATEST NEWS - TEXAS ADVANCED COMPUTING CENTER" class="img-responsive" src="/documents/1084364/1809667/home-chameleon.png/" style="margin:0px 0px 15px 0px;" /></div>
 	<div class="col-md-6">
 		<h5 style="margin:0px 0px 25px 0px;">
-			<a href="https://frontera-portal.tacc.utexas.edu/fellowship/awardees/" target="_blank">MEET THE FRONTERA COMPUTATIONAL SCIENCE FELLOWS FOR 2020-2021</a></h5>
+			<a href="/web/website/-/chameleon-testbed-launches-third-phase-with-focus-on-iot-reproducibility">CHAMELEON TESTBED LAUNCHES THIRD PHASE WITH FOCUS ON IOT, REPRODUCIBILITY</a></h5>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-6">
+		<img alt="COVID-19 UPDATES FROM TACC" class="img-responsive" src="/documents/1084364/1809667/home-covid-page.jpg/" style="margin:0px 0px 15px 0px;" /></div>
+	<div class="col-md-6">
+		<h5 style="margin:0px 0px 25px 0px;">
+			<a href="/web/website/covid-19">COVID-19 UPDATES FROM TACC</a></h5>
 	</div>
 </div>
 <div class="row">
@@ -24,13 +32,5 @@
 	<div class="col-md-6">
 		<h5 style="margin:0px 0px 25px 0px;">
 			<a href="https://youtu.be/T8xd1W4C61Y" target="_blank">Urgent Computing: Advanced computing helps scientists and researchers combat urgent crises</a></h5>
-	</div>
-</div>
-<div class="row">
-	<div class="col-md-6">
-		<img alt="Take Your Mind on An Adventure" class="img-responsive" src="/documents/1084364/1809667/adventure.jpeg/" style="margin:0px 0px 15px 0px;" /></div>
-	<div class="col-md-6">
-		<h5 style="margin:0px 0px 25px 0px;">
-			<a href="/web/website/-/take-your-mind-on-an-adventure">Take Your Mind on An Adventure</a></h5>
 	</div>
 </div>
