--- a/content/home--featured-news.html
+++ b/content/home--featured-news.html
@@ -2,22 +2,7 @@
 	&nbsp;</h3>
 <h3>
 	Featured News</h3>
-<div class="row">
-	<div class="col-md-6">
-		<img alt="SUPERCOMPUTING PROVIDES NEW INSIGHTS INTO HEART VALVE BEHAVIOR - LATEST NEWS - TEXAS ADVANCED COMPUTING CENTER" class="img-responsive" src="/documents/1084364/1809667/home-heart-valve.png/" style="margin:0px 0px 15px 0px;" /></div>
-	<div class="col-md-6">
-		<h5 style="margin:0px 0px 25px 0px;">
-			<a href="/web/website/-/supercomputing-provides-new-insights-into-heart-valve-behavior">SUPERCOMPUTING PROVIDES NEW INSIGHTS INTO HEART VALVE BEHAVIOR</a></h5>
-	</div>
-</div>
-<div class="row">
-	<div class="col-md-6">
-		<img alt="CHAMELEON TESTBED LAUNCHES THIRD PHASE WITH FOCUS ON IOT, REPRODUCIBILITY - LATEST NEWS - TEXAS ADVANCED COMPUTING CENTER" class="img-responsive" src="/documents/1084364/1809667/home-chameleon.png/" style="margin:0px 0px 15px 0px;" /></div>
-	<div class="col-md-6">
-		<h5 style="margin:0px 0px 25px 0px;">
-			<a href="/web/website/-/chameleon-testbed-launches-third-phase-with-focus-on-iot-reproducibility">CHAMELEON TESTBED LAUNCHES THIRD PHASE WITH FOCUS ON IOT, REPRODUCIBILITY</a></h5>
-	</div>
-</div>
+<!--The COVID-19 (1st) and Urgent Computing (2nd) entries should be at the top-->
 <div class="row">
 	<div class="col-md-6">
 		<img alt="COVID-19 UPDATES FROM TACC" class="img-responsive" src="/documents/1084364/1809667/home-covid-page.jpg/" style="margin:0px 0px 15px 0px;" /></div>
@@ -32,5 +17,21 @@
 	<div class="col-md-6">
 		<h5 style="margin:0px 0px 25px 0px;">
 			<a href="https://youtu.be/T8xd1W4C61Y" target="_blank">Urgent Computing: Advanced computing helps scientists and researchers combat urgent crises</a></h5>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-6">
+		<img alt="SUPERCOMPUTING PROVIDES NEW INSIGHTS INTO HEART VALVE BEHAVIOR - LATEST NEWS - TEXAS ADVANCED COMPUTING CENTER" class="img-responsive" src="/documents/1084364/1809667/home-heart-valve.png/" style="margin:0px 0px 15px 0px;" /></div>
+	<div class="col-md-6">
+		<h5 style="margin:0px 0px 25px 0px;">
+			<a href="/web/website/-/supercomputing-provides-new-insights-into-heart-valve-behavior">SUPERCOMPUTING PROVIDES NEW INSIGHTS INTO HEART VALVE BEHAVIOR</a></h5>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-6">
+		<img alt="CHAMELEON TESTBED LAUNCHES THIRD PHASE WITH FOCUS ON IOT, REPRODUCIBILITY - LATEST NEWS - TEXAS ADVANCED COMPUTING CENTER" class="img-responsive" src="/documents/1084364/1809667/home-chameleon.png/" style="margin:0px 0px 15px 0px;" /></div>
+	<div class="col-md-6">
+		<h5 style="margin:0px 0px 25px 0px;">
+			<a href="/web/website/-/chameleon-testbed-launches-third-phase-with-focus-on-iot-reproducibility">CHAMELEON TESTBED LAUNCHES THIRD PHASE WITH FOCUS ON IOT, REPRODUCIBILITY</a></h5>
 	</div>
 </div>
