RT-18256: Add Stephanie Zeller

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -1425,6 +1425,14 @@
 			<td>
 				<a name="X"></a> Data Management &amp; Collections</td>
 		</tr>
+        <tr>
+            <td>
+                <a href="/web/website/about/directory/stephanie-zeller">Zeller, Stephanie</a></td>
+            <td>
+                <a href="mailto:szeller@tacc.utexas.edu">szeller@tacc.utexas.edu</a></td>
+            <td>
+                Scalable Visualization Technologies, Visualization Interfaces &amp; Applications</td>
+        </tr>
 		<tr>
 			<td>
 				<a href="/web/website/about/directory/zhao-zhang">Zhang, Zhao</a></td>
