RT-18288: Add Joy Schwartz

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -1132,6 +1132,14 @@
 				Data Management &amp; Collections</td>
 		</tr>
 		<tr>
+            <td>
+                <a href="/web/website/about/directory/joy-schwartz">Schwartz, Joy</a></td>
+            <td>
+                <a href="mailto:jschwartz@tacc.utexas.edu">jschwartz@tacc.utexas.edu</a></td>
+            <td>
+                Expanding Pathways in Computing (EPIC)</td>
+        </tr>
+		<tr>
 			<td>
 				<a href="/web/website/about/directory/remy-scott">Scott, Remy</a></td>
 			<td>
