--- a/content/education/EPIC/Research/presentations-and-publications.html
+++ b/content/education/EPIC/Research/presentations-and-publications.html
@@ -1,368 +1,380 @@
 <style id="style--table" type="text/css">
-/*
-WeTeach CS - Table
-
-Scope styles for table on WeTeach_CS page.
-
-.weteachcs-table
-
-Markup:
-<table class="weteachcs-table">
-	<tbody>
-		<tr>
-			<th>
-				Date</th>
-			<th>
-				Title</th>
-			<th>
-				Place of Presentation</th>
-			<th>
-				Authors</th>
-			<th>
-				Link</th>
-		</tr>
-		<tr>
-			<td>
-				Month, 2019</td>
-			<td>
-				Title 1</td>
-			<td>
-				Location 1</td>
-			<td>
-				<ul>
-					<li>Person 2,( Degree,) Institution</li>
-				</ul>
-			</td>
-			<td>
-				<a  data-cke-saved-href="http://example.com" href="http://example.com" target="_blank">View / Download</a></td>
-		</tr>
-		<tr>
-			<td>
-				Month, 2019</td>
-			<td>
-				Title 2</td>
-			<td>
-				Location 2</td>
-			<td>
-				<ul>
-					<li>Person 1,( Degree,) Institution</li>
-					<li>Person 2,( Degree,) Institution</li>
-				</ul>
-			</td>
-			<td>
-				<a  data-cke-saved-href="http://example.com" href="http://example.com" target="_blank">Download</a></td>
-		</tr>
-	</tbody>
-</table>
-
-Style guide: components.weteachcs.table
-*/
-.weteachcs-table {
-	margin: 0 auto;
-	font-family: Arial, Helvetica, sans-serif;
-}
-.weteachcs-table tr {
-	border: 1px solid #ddd;
-}
-.weteachcs-table th {
-	font-size: 1em;
-}
-
-/* For "mobile", render a single column of blocks */
-@media (max-width: 767.98px) {
-	.weteachcs-table table,
-	.weteachcs-table tr,
-	.weteachcs-table td               { display: block; }
-	.weteachcs-table tr:first-of-type { display: none; }
+	/* WARN: Duplicated in:
+			- `epic/research/presentations`
+			- `epic/research/publications`
+	*/
+	/*
+	WeTeach CS - Table
+	
+	Scope styles for table on WeTeach_CS page.
+	
+	.weteachcs-table
+	
+	Markup:
+	<table class="weteachcs-table">
+		<tbody>
+			<tr>
+				<th class="weteachcs-table__date">
+					Date</th>
+				<th class="weteachcs-table__title">
+					Title</th>
+				<th class="weteachcs-table__place">
+					Place of Presentation</th>
+				<th class="weteachcs-table__cite">
+					Authors</th>
+				<th class="weteachcs-table__link">
+					Link</th>
+			</tr>
+			<tr>
+				<td class="weteachcs-table__date">
+					Month, 2019</td>
+				<td class="weteachcs-table__title">
+					Title 1</td>
+				<td class="weteachcs-table__place">
+					Location 1</td>
+				<td class="weteachcs-table__cite">
+					<ul>
+						<li>Person 2,( Degree,) Institution</li>
+					</ul>
+				</td>
+				<td class="weteachcs-table__link">
+					<a  data-cke-saved-href="https://www.slideshare.net/weteachcs/abc-123" href="https://www.slideshare.net/weteachcs/abc-123" target="_blank">View</a></td>
+			</tr>
+		</tbody>
+	</table>
+	<table class="weteachcs-table">
+		<tbody>
+			<tr>
+				<th class="weteachcs-table__title">
+					Title</th>
+				<th class="weteachcs-table__cite">
+					Citation</th>
+				<th class="weteachcs-table__link">
+					Link</th>
+			</tr>
+			<tr>
+				<td class="weteachcs-table__title">
+					Title 1</td>
+				<td class="weteachcs-table__cite">
+					Citation 1 (long text).
+				</td>
+				<td class="weteachcs-table__link">
+					<a  data-cke-saved-href="http://utexas.box.com/s/abc123" href="http://utexas.box.com/s/abc123" target="_blank">View</a></td>
+			</tr>
+		</tbody>
+	</table>
+	
+	Style guide: components.weteachcs.table
+	*/
+	.weteachcs-table {
+		margin: 0 auto;
+		font-family: Arial, Helvetica, sans-serif;
+	}
 	.weteachcs-table tr {
-		margin: 1em 0;
+		border: 1px solid #ddd;
 	}
-
-	/* Date */ .weteachcs-table td:nth-child(1) {
-		font-weight: bold;
+	.weteachcs-table th {
+		font-size: 1em;
 	}
-	/* Title */ .weteachcs-table td:nth-child(2) {
-		font-size: larger;
+	
+	/* For "mobile", render a single column of blocks */
+	@media (max-width: 767.98px) {
+		.weteachcs-table table,
+		.weteachcs-table tr,
+		.weteachcs-table td    { display: block; }
+		.weteachcs-table thead { display: none; }
+		.weteachcs-table tr {
+			margin: 1em 0;
+		}
+	
+		/* Date */ .weteachcs-table__date {
+			font-weight: bold;
+		}
+		/* Title */ .weteachcs-table__title {
+			font-size: larger;
+		}
 	}
-}
-
-/* For "desktop" */
-@media (min-width: 768px) {
-	/* Title */ .weteachcs-table td:nth-child(2) {
-		font-style: italic;
-	}
-	/* Location */ .weteachcs-table td:nth-child(3),
-	/* Person */ .weteachcs-table td:nth-child(4) {
-		font-size: 12px; /* generally, this is the smallest allowed font size for legibiliy */
-	}
-	/* (Person) container */ .weteachcs-table ul {
-		margin: 0;
-	}
-	/* (Person) */ .weteachcs-table li {
-		list-style-position: inside;
-	}
-	/* Link */ .weteachcs-table th:nth-child(5),
-	/* Link */ .weteachcs-table td:nth-child(5) {
-		text-align: center;
-	}
-}</style>
-<p>
-	<a name="top"></a></p>
-<h3>
-	Presentations and Publications</h3>
-<p>
-	More presentations can be found on the <a href="https://www.slideshare.net/weteachcs" target="_blank">WeTeach_CS Slideshare</a> page.</p>
-<table class="weteachcs-table">
-	<tbody>
-		<tr>
-			<th>
-				Date</th>
-			<th>
-				Title</th>
-			<th>
-				Presented At</th>
-			<th>
-				Author(s)</th>
-			<th>
-				Link</th>
-		</tr>
-		<tr>
-			<td>
-				July, 2019</td>
-			<td>
-				WeTeach_ CS and You Can Too!</td>
-			<td>
-				Lone Star STEM Grantee Webinar</td>
-			<td>
-				<ul>
-					<li>
-						Carol Fletcher, Ph.D.</li>
-				</ul>
-			</td>
-			<td>
-				<a href="https://utexas.box.com/s/gvr3vwpkbgsubmi6jud47wm6lk4w5yih" target="_blank">View / Download</a></td>
-		</tr>
-		<tr>
-			<td>
-				March, 2019</td>
-			<td>
-				Streamlining Evaluation "Steal This" Session</td>
-			<td>
-				100Kin10 Summit - San Diego, CA</td>
-			<td>
-				<ul>
-					<li>
-						Lisa Garbrecht, Ph.D.</li>
-				</ul>
-			</td>
-			<td>
-				<a href="https://utexas.box.com/shared/static/1tr5yp2iy1bqz91laq1ck2dd26ys3jht" target="_blank">View / Download</a></td>
-		</tr>
-		<tr>
-			<td>
-				January, 2019</td>
-			<td>
-				C3: Coding Clubs and Camps</td>
-			<td>
-				Texas STEM Conference - San Antonio, TX</td>
-			<td>
-				<ul>
-					<li>
-						Debi Pfitzenmaier</li>
-				</ul>
-			</td>
-			<td>
-				<a href="https://www.slideshare.net/weteachcs/c3-coding-clubs-and-camps-texas-stem-conference-jan-2019" target="_blank">View / Download</a></td>
-		</tr>
-		<tr>
-			<td>
-				January, 2019</td>
-			<td>
-				WeTeach_CS for HS</td>
-			<td>
-				Texas STEM Conference - San Antonio, TX</td>
-			<td>
-				<ul>
-					<li>
-						John Owen</li>
-				</ul>
-			</td>
-			<td>
-				<a href="https://www.slideshare.net/weteachcs/wtcs-for-hs-texas-stem-conference-jan-2019" target="_blank">View / Download</a></td>
-		</tr>
-		<tr>
-			<td>
-				January, 2019</td>
-			<td>
-				Methods for Measuring Inequities in CS Education</td>
-			<td>
-				TASA/TASB Conference - Dallas, TX</td>
-			<td>
-				<ul>
-					<li>
-						Jayce R. Warner, Ph.D.</li>
-					<li>
-						Carol L. Fletcher, Ph.D.</li>
-					<li>
-						Lisa S. Garbrecht, Ph.D.</li>
-				</ul>
-			</td>
-			<td>
-				<a href="https://utexas.box.com/s/llovod6afe7ucuwzlrvf1bgbfdnayfgb" target="_blank">Download</a></td>
-		</tr>
-		<tr>
-			<td>
-				September, 2018</td>
-			<td>
-				El Paso CS Policy &amp; Code</td>
-			<td>
-				TEALS El Paso Administrator and Counselor Computer Science Workshop - El Paso, Texas</td>
-			<td>
-				<ul>
-					<li>
-						Carol Fletcher, Ph.D.</li>
-				</ul>
-			</td>
-			<td>
-				<a href="https://utexas.box.com/s/s4ayf8lflvg0uiqr62svxyd8q3d4kg7p" target="_blank">View / Download</a></td>
-		</tr>
-		<tr>
-			<td>
-				September, 2018</td>
-			<td>
-				Increasing Capacity for CS Education in Rural Areas</td>
-			<td>
-				SIGCSE, 2018</td>
-			<td>
-				<ul>
-					<li>
-						Jayce R. Warner, Ph.D.</li>
-					<li>
-						Carol L. Fletcher, Ph.D.</li>
-					<li>
-						Ryan Torbey</li>
-					<li>
-						Lisa S. Garbrecht Ph.D.</li>
-				</ul>
-			</td>
-			<td>
-				<a href="https://utexas.box.com/s/p60sw6pympx2cdzakfc35vdlrx208zhi" target="_blank">View / Download</a></td>
-		</tr>
-		<tr>
-			<td>
-				July, 2018</td>
-			<td>
-				Texas K-12 Computer Science Education Policy</td>
-			<td>
-				Austin, Texas</td>
-			<td>
-				<ul>
-					<li>
-						Carol Fletcher, Ph.D.</li>
-				</ul>
-			</td>
-			<td>
-				<a href="https://utexas.box.com/s/2uvlodqv9dln5okaes6uqvm5jqryomlm" target="_blank">View / Download</a></td>
-		</tr>
-		<tr>
-			<td>
-				June, 2018</td>
-			<td>
-				Education in the Innovation Age: Meeting the K-12 CS Challenge</td>
-			<td>
-				2018 WeTeach_CS Summit</td>
-			<td>
-				<ul>
-					<li>
-						Carol Fletcher, Ph.D.</li>
-				</ul>
-			</td>
-			<td>
-				<a href="https://utexas.box.com/s/tc40g915bbkp4efniteig0oj456898zl" target="_blank">View / Download</a></td>
-		</tr>
-		<tr>
-			<td>
-				June, 2018</td>
-			<td>
-				WeTeach_Cs: What's Next?</td>
-			<td>
-				WeTeach_CS Summit, 2018</td>
-			<td>
-				<ul>
-					<li>
-						Carol Fletcher, Ph.D.</li>
-				</ul>
-			</td>
-			<td>
-				<a href="https://utexas.box.com/s/8f5goszirqvgh6lkucy1tu1nqf8tspow" target="_blank">View / Download</a></td>
-		</tr>
-		<tr>
-			<td>
-				February, 2018</td>
-			<td>
-				WeTeach_Cs Support for AP CSA and CSP</td>
-			<td>
-				TCEA 2018 - Austin, Texas</td>
-			<td>
-				<ul>
-					<li>
-						Carol Fletcher, Ph.D.</li>
-					<li>
-						John Owen</li>
-				</ul>
-			</td>
-			<td>
-				<a href="https://utexas.box.com/s/5anm6cez1z96vxb4ie0extuscb8xjj6f" target="_blank">View / Download</a></td>
-		</tr>
-		<tr>
-			<td>
-				February, 2018</td>
-			<td>
-				Building a K-12 CS Pipeline</td>
-			<td>
-				TCEA 2018 - Austin, Texas</td>
-			<td>
-				<ul>
-					<li>
-						Carol Fletcher, Ph.D.</li>
-				</ul>
-			</td>
-			<td>
-				<a href="https://utexas.box.com/s/v24u6tamrwvcf78vrtturveffmilgcje" target="_blank">View / Download</a></td>
-		</tr>
-		<tr>
-			<td>
-				October, 2017</td>
-			<td>
-				Implementing the Tri-Agency Report &amp; Preparing All Students for 60x30 TX</td>
-			<td>
-				TASA/TASB Conference - Dallas, TX</td>
-			<td>
-				<ul>
-					<li>
-						Carol Fletcher, Ph.D.</li>
-				</ul>
-			</td>
-			<td>
-				<a href="https://utexas.box.com/s/irr1jymzazpbxo3b4b7dgf1oe647t0wc" target="_blank">View / Download</a></td>
-		</tr>
-		<tr>
-			<td>
-				October, 2017</td>
-			<td>
-				CS Education in Texas ISDs: Partnerships for Success</td>
-			<td>
-				TASA/TASB Conference - Dallas, TX</td>
-			<td>
-				<ul>
-					<li>
-						Carol Fletcher, Ph.D.</li>
-					<li>
-						Pauline Dow, Ph.D.</li>
-				</ul>
-			</td>
-			<td>
-				<a href="https://utexas.box.com/s/llovod6afe7ucuwzlrvf1bgbfdnayfgb" target="_blank">Download</a></td>
-		</tr>
-	</tbody>
-</table>
+	
+	/* For "desktop" */
+	@media (min-width: 768px) {
+		/* Title */ td.weteachcs-table__title {
+			font-style: italic;
+		}
+		/* Location */ .weteachcs-table__place,
+		/* Citation */ .weteachcs-table__cite {
+			font-size: 12px; /* generally, this is the smallest allowed font size for legibiliy */
+		}
+		/* (Citation) */
+		.weteachcs-table ul {
+			margin: 0;
+		}
+		.weteachcs-table li {
+			list-style-position: inside;
+		}
+		/* Link */ .weteachcs-table__link {
+			text-align: center;
+		}
+	}</style>
+	<p>
+		<a name="top"></a></p>
+	<h3>
+		Presentations and Publications</h3>
+	<p>
+		More presentations can be found on the <a href="https://www.slideshare.net/weteachcs" target="_blank">WeTeach_CS Slideshare</a> page.</p>
+	<table class="weteachcs-table">
+		<thead>
+			<tr>
+				<th class="weteachcs-table__date">
+					Date</th>
+				<th class="weteachcs-table__title">
+					Title</th>
+				<th class="weteachcs-table__place">
+					Presented At</th>
+				<th class="weteachcs-table__cite">
+					Author(s)</th>
+				<th class="weteachcs-table__link">
+					Link</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td class="weteachcs-table__date">
+					July, 2019</td>
+				<td class="weteachcs-table__title">
+					WeTeach_ CS and You Can Too!</td>
+				<td class="weteachcs-table__place">
+					Lone Star STEM Grantee Webinar</td>
+				<td class="weteachcs-table__cite">
+					<ul>
+						<li>
+							Carol Fletcher, Ph.D.</li>
+					</ul>
+				</td>
+				<td class="weteachcs-table__link">
+					<a href="https://utexas.box.com/s/gvr3vwpkbgsubmi6jud47wm6lk4w5yih" target="_blank">View</a></td>
+			</tr>
+			<tr>
+				<td class="weteachcs-table__date">
+					March, 2019</td>
+				<td class="weteachcs-table__title">
+					Streamlining Evaluation "Steal This" Session</td>
+				<td class="weteachcs-table__place">
+					100Kin10 Summit - San Diego, CA</td>
+				<td class="weteachcs-table__cite">
+					<ul>
+						<li>
+							Lisa Garbrecht, Ph.D.</li>
+					</ul>
+				</td>
+				<td class="weteachcs-table__link">
+					<a href="https://utexas.box.com/shared/static/1tr5yp2iy1bqz91laq1ck2dd26ys3jht" target="_blank">Download</a></td>
+			</tr>
+			<tr>
+				<td class="weteachcs-table__date">
+					January, 2019</td>
+				<td class="weteachcs-table__title">
+					C3: Coding Clubs and Camps</td>
+				<td class="weteachcs-table__place">
+					Texas STEM Conference - San Antonio, TX</td>
+				<td class="weteachcs-table__cite">
+					<ul>
+						<li>
+							Debi Pfitzenmaier</li>
+					</ul>
+				</td>
+				<td class="weteachcs-table__link">
+					<a href="https://www.slideshare.net/weteachcs/c3-coding-clubs-and-camps-texas-stem-conference-jan-2019" target="_blank">View</a></td>
+			</tr>
+			<tr>
+				<td class="weteachcs-table__date">
+					January, 2019</td>
+				<td class="weteachcs-table__title">
+					WeTeach_CS for HS</td>
+				<td class="weteachcs-table__place">
+					Texas STEM Conference - San Antonio, TX</td>
+				<td class="weteachcs-table__cite">
+					<ul>
+						<li>
+							John Owen</li>
+					</ul>
+				</td>
+				<td class="weteachcs-table__link">
+					<a href="https://www.slideshare.net/weteachcs/wtcs-for-hs-texas-stem-conference-jan-2019" target="_blank">View</a></td>
+			</tr>
+			<tr>
+				<td class="weteachcs-table__date">
+					January, 2019</td>
+				<td class="weteachcs-table__title">
+					Methods for Measuring Inequities in CS Education</td>
+				<td class="weteachcs-table__place">
+					TASA/TASB Conference - Dallas, TX</td>
+				<td class="weteachcs-table__cite">
+					<ul>
+						<li>
+							Jayce R. Warner, Ph.D.</li>
+						<li>
+							Carol L. Fletcher, Ph.D.</li>
+						<li>
+							Lisa S. Garbrecht, Ph.D.</li>
+					</ul>
+				</td>
+				<td class="weteachcs-table__link">
+					<a href="https://utexas.box.com/s/llovod6afe7ucuwzlrvf1bgbfdnayfgb" target="_blank">Download</a></td>
+			</tr>
+			<tr>
+				<td class="weteachcs-table__date">
+					September, 2018</td>
+				<td class="weteachcs-table__title">
+					El Paso CS Policy &amp; Code</td>
+				<td class="weteachcs-table__place">
+					TEALS El Paso Administrator and Counselor Computer Science Workshop - El Paso, Texas</td>
+				<td class="weteachcs-table__cite">
+					<ul>
+						<li>
+							Carol Fletcher, Ph.D.</li>
+					</ul>
+				</td>
+				<td class="weteachcs-table__link">
+					<a href="https://utexas.box.com/s/s4ayf8lflvg0uiqr62svxyd8q3d4kg7p" target="_blank">View</a></td>
+			</tr>
+			<tr>
+				<td class="weteachcs-table__date">
+					September, 2018</td>
+				<td class="weteachcs-table__title">
+					Increasing Capacity for CS Education in Rural Areas</td>
+				<td class="weteachcs-table__place">
+					SIGCSE, 2018</td>
+				<td class="weteachcs-table__cite">
+					<ul>
+						<li>
+							Jayce R. Warner, Ph.D.</li>
+						<li>
+							Carol L. Fletcher, Ph.D.</li>
+						<li>
+							Ryan Torbey</li>
+						<li>
+							Lisa S. Garbrecht Ph.D.</li>
+					</ul>
+				</td>
+				<td class="weteachcs-table__link">
+					<a href="https://utexas.box.com/s/p60sw6pympx2cdzakfc35vdlrx208zhi" target="_blank">View</a></td>
+			</tr>
+			<tr>
+				<td class="weteachcs-table__date">
+					July, 2018</td>
+				<td class="weteachcs-table__title">
+					Texas K-12 Computer Science Education Policy</td>
+				<td class="weteachcs-table__place">
+					Austin, Texas</td>
+				<td class="weteachcs-table__cite">
+					<ul>
+						<li>
+							Carol Fletcher, Ph.D.</li>
+					</ul>
+				</td>
+				<td class="weteachcs-table__link">
+					<a href="https://utexas.box.com/s/2uvlodqv9dln5okaes6uqvm5jqryomlm" target="_blank">View</a></td>
+			</tr>
+			<tr>
+				<td class="weteachcs-table__date">
+					June, 2018</td>
+				<td class="weteachcs-table__title">
+					Education in the Innovation Age: Meeting the K-12 CS Challenge</td>
+				<td class="weteachcs-table__place">
+					2018 WeTeach_CS Summit</td>
+				<td class="weteachcs-table__cite">
+					<ul>
+						<li>
+							Carol Fletcher, Ph.D.</li>
+					</ul>
+				</td>
+				<td class="weteachcs-table__link">
+					<a href="https://utexas.box.com/s/tc40g915bbkp4efniteig0oj456898zl" target="_blank">View</a></td>
+			</tr>
+			<tr>
+				<td class="weteachcs-table__date">
+					June, 2018</td>
+				<td class="weteachcs-table__title">
+					WeTeach_Cs: What's Next?</td>
+				<td class="weteachcs-table__place">
+					WeTeach_CS Summit, 2018</td>
+				<td class="weteachcs-table__cite">
+					<ul>
+						<li>
+							Carol Fletcher, Ph.D.</li>
+					</ul>
+				</td>
+				<td class="weteachcs-table__link">
+					<a href="https://utexas.box.com/s/8f5goszirqvgh6lkucy1tu1nqf8tspow" target="_blank">View</a></td>
+			</tr>
+			<tr>
+				<td class="weteachcs-table__date">
+					February, 2018</td>
+				<td class="weteachcs-table__title">
+					WeTeach_Cs Support for AP CSA and CSP</td>
+				<td class="weteachcs-table__place">
+					TCEA 2018 - Austin, Texas</td>
+				<td class="weteachcs-table__cite">
+					<ul>
+						<li>
+							Carol Fletcher, Ph.D.</li>
+						<li>
+							John Owen</li>
+					</ul>
+				</td>
+				<td class="weteachcs-table__link">
+					<a href="https://utexas.box.com/s/5anm6cez1z96vxb4ie0extuscb8xjj6f" target="_blank">View</a></td>
+			</tr>
+			<tr>
+				<td class="weteachcs-table__date">
+					February, 2018</td>
+				<td class="weteachcs-table__title">
+					Building a K-12 CS Pipeline</td>
+				<td class="weteachcs-table__place">
+					TCEA 2018 - Austin, Texas</td>
+				<td class="weteachcs-table__cite">
+					<ul>
+						<li>
+							Carol Fletcher, Ph.D.</li>
+					</ul>
+				</td>
+				<td class="weteachcs-table__link">
+					<a href="https://utexas.box.com/s/v24u6tamrwvcf78vrtturveffmilgcje" target="_blank">View</a></td>
+			</tr>
+			<tr>
+				<td class="weteachcs-table__date">
+					October, 2017</td>
+				<td class="weteachcs-table__title">
+					Implementing the Tri-Agency Report &amp; Preparing All Students for 60x30 TX</td>
+				<td class="weteachcs-table__place">
+					TASA/TASB Conference - Dallas, TX</td>
+				<td class="weteachcs-table__cite">
+					<ul>
+						<li>
+							Carol Fletcher, Ph.D.</li>
+					</ul>
+				</td>
+				<td class="weteachcs-table__link">
+					<a href="https://utexas.box.com/s/irr1jymzazpbxo3b4b7dgf1oe647t0wc" target="_blank">View</a></td>
+			</tr>
+			<tr>
+				<td class="weteachcs-table__date">
+					October, 2017</td>
+				<td class="weteachcs-table__title">
+					CS Education in Texas ISDs: Partnerships for Success</td>
+				<td class="weteachcs-table__place">
+					TASA/TASB Conference - Dallas, TX</td>
+				<td class="weteachcs-table__cite">
+					<ul>
+						<li>
+							Carol Fletcher, Ph.D.</li>
+						<li>
+							Pauline Dow, Ph.D.</li>
+					</ul>
+				</td>
+				<td class="weteachcs-table__link">
+					<a href="https://utexas.box.com/s/llovod6afe7ucuwzlrvf1bgbfdnayfgb" target="_blank">Download</a></td>
+			</tr>
+		</tbody>
+	</table>
+	
