RT-18414: Remove recent envent TACSter

--- a/content/home--training-and-events.html
+++ b/content/home--training-and-events.html
@@ -2,11 +2,29 @@
 	Training &amp; Events</h2>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="/web/website/taccster" style="margin-bottom:10px;"><img class="img-responsive" src="/documents/1084364/1825988/homepageNews-taccster.jpg/" style="margin-bottom:10px;" /></a></div>
+		<a href="https://learn.tacc.utexas.edu/course/view.php?id=94" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/frontera.jpg" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="/web/website/taccster"><strong>TACCSTER 2020: TACC Symposium for Texas Researchers</strong></a><br />
-			September 17, 2020 – September 18, 2020</p>
+			<a href="https://learn.tacc.utexas.edu/course/view.php?id=94" target="_blank"><strong>High Performance Computing on Frontera Training Series: October 2020</strong><br />Focus on MPI, Hybrid Computing</a><br />
+			October 15, 2020</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://learn.tacc.utexas.edu/course/view.php?id=97" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/frontera.jpg" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://learn.tacc.utexas.edu/course/view.php?id=97" target="_blank"><strong>High Performance Computing on Frontera Training Series: October 2020</strong><br />Focus on MPI, Hybrid Computing</a><br />
+			October 22, 2020</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://learn.tacc.utexas.edu/course/view.php?id=95" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/frontera.jpg" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://learn.tacc.utexas.edu/course/view.php?id=95" target="_blank"><strong>High Performance Computing on Frontera Training Series: October 2020</strong><br />Focus on Parallel I/O, HPC Tools, Debugging, Profiling, and Best Practices</a><br />
+			October 29, 2020</p>
 	</div>
 </div>
 <div class="row">
