--- a/content/education/EPIC/funders-and-project-partners.html
+++ b/content/education/EPIC/funders-and-project-partners.html
@@ -133,7 +133,31 @@ Style guide: components.weteachcs
                 /* Add space between image and content beneath */
                 padding-bottom: 15px; /* Horizontal padding from `.col` (via `tacc-new-theme/css/main.css`) */
             }</style>
-    <style id="o-gallery-styles">
+<section class="weteachcs-content">
+    <div class="weteachcs-card weteachcs-card--highlight">
+        <div class="weteachcs-card__content">
+            <p>
+                Thank you to all of the funders and project partners of EPIC and WeTeach_CS. Without them, our work would not be possible.</p>
+        </div>
+    </div>
+    <h3>
+        Thank You</h3>
+    <ul>
+        <li>National Science Foundation</li>
+        <li>Seigel Family Endowment</li>
+        <li>Google</li>
+        <li>Microsoft</li>
+        <li>KLE Foundation</li>
+        <li>Jobs for the Future</li>
+        <li>Robin Hood</li>
+        <li>Code.org</li>
+        <li>100kin10</li>
+        <li>Texas Education Agency</li>
+        <li>Texas Instruments</li>
+    </ul>
+    <!-- Gallery removed 2020-09 for "UTS 122 Guidelines […]"-->
+    <!-- SEE: https://www.utsystem.edu/sites/policy-library/policies/uts-122-guidelines-web-site-solicitations -->
+    <!--<style id="o-gallery-styles">
         /*
         Gallery (Object)
 
@@ -203,15 +227,6 @@ Style guide: components.weteachcs
             }
         }
     </style>
-<section class="weteachcs-content">
-    <div class="weteachcs-card weteachcs-card--highlight">
-        <div class="weteachcs-card__content">
-            <p>
-                Thank you to all of the funders and project partners of EPIC and WeTeach_CS. Without them, our work would not be possible.</p>
-        </div>
-    </div>
-    <h3>
-        Thank You</h3>
     <ul class="o-gallery  s-gallery">
         <li class="o-gallery__square">
             <img alt="NSF" src="https://www.tacc.utexas.edu/documents/1084364/1852071/nsf.png/27118cfa-da8b-421c-82b3-1d08237bd9ff?t=1586990485263" /></li>
@@ -235,5 +250,5 @@ Style guide: components.weteachcs
             <img alt="Texas Instruments" src="https://www.tacc.utexas.edu/documents/1084364/1852071/texas-instruments.png/953697d6-0497-4b38-9ab4-4a5a20c0996b?t=1586990518112" /></li>
         <li class="o-gallery__square">
             <img alt="Code.org" src="https://www.tacc.utexas.edu/documents/1084364/1852071/code-org.png/1822d086-4190-4dcc-befe-b480f79b7db2?t=1586990430843" /></li>
-    </ul>
+    </ul>-->
 </section>
